// Description: This file contains the header for a library produced for the
// "main" subproject of the "nngio" project.

// This name convention ( lib<project_name>_<subproject_name>.h ) is used
// for libraries only.

#ifndef LIBnngio_MAIN_H
#define LIBnngio_MAIN_H

void main_function(void);

#endif // LIBnngio_MAIN_H
